--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="tab_discover">Discover</string>
     <string name="tab_profile">Profile</string>
     <string name="tab_settings">Settings</string>
+
+    <string name="invalid_rss_url">Invalid RSS Feed URL.</string>
 </resources>
