--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="tab_settings">Settings</string>
 
     <string name="invalid_rss_url">Invalid RSS Feed URL.</string>
+    <string name="error_fetch_parse">Error processing RSS Feed. Check the URL and try again.</string>
 </resources>
