--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="tab_profile">Profile</string>
     <string name="tab_settings">Settings</string>
 
+    <string name="notif_channel_name">Podcast Now Playing</string>
+    <string name="notif_channel_description">Untitled Podcast App\'s media player.</string>
+
     <string name="invalid_rss_url">Invalid RSS Feed URL.</string>
     <string name="error_fetch_parse">Error processing RSS Feed. Check the URL and try again.</string>
 </resources>
